--- a/package.xml
+++ b/package.xml
@@ -153,7 +153,7 @@ http://pear.php.net/dtd/package-2.0.xsd">
     <channel>pear.horde.org</channel>
    </package>
    <package>
-    <name>Horde_LDAP</name>
+    <name>Ldap</name>
     <channel>pear.horde.org</channel>
    </package>
    <package>
