--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.4.9" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-http://pear.php.net/dtd/tasks-1.0.xsd
-http://pear.php.net/dtd/package-2.0
-http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>Kolab_Storage</name>
  <channel>pear.horde.org</channel>
  <summary>A package for handling Kolab data stored on an IMAP server.</summary>
  <description>Storing user data in an IMAP account belonging to the
  user is one of the Kolab server core concepts. This package provides
  all the necessary means to deal with this type of data storage
- effectively.
- </description>
+ effectively.</description>
  <lead>
   <name>Gunnar Wrobel</name>
   <user>wrobel</user>
@@ -35,7 +31,8 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <email>jan@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2009-02-24</date>
+ <date>2010-03-11</date>
+ <time>20:56:19</time>
  <version>
   <release>0.4.0</release>
   <api>0.1.0</api>
@@ -46,12 +43,12 @@ http://pear.php.net/dtd/package-2.0.xsd">
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
  <notes>
-  * Fixed list driver to prevent overwriting folder data when
-    authenticating twice (relevant for testing).
-  * Allow to supress triggering (relevant for testing).
+* Fixed list driver to prevent overwriting folder data when
+  authenticating twice (relevant for testing).
+* Allow to supress triggering (relevant for testing).
  </notes>
  <contents>
-  <dir name="/">
+  <dir baseinstalldir="/" name="/">
    <dir name="doc">
     <dir name="Horde">
      <dir name="Kolab">
@@ -73,18 +70,20 @@ http://pear.php.net/dtd/package-2.0.xsd">
    <dir name="lib">
     <dir name="Horde">
      <dir name="Kolab">
-      <file name="Storage.php" role="php" />
       <dir name="Storage">
+       <dir name="Driver">
+        <file name="Imap.php" role="php" />
+       </dir> <!-- /lib/Horde/Kolab/Storage/Driver -->
        <file name="Cache.php" role="php" />
        <file name="Data.php" role="php" />
        <file name="Driver.php" role="php" />
-       <dir name="Driver">
-	 <file name="Imap.php" role="php" />
-       </dir> <!-- /lib/Horde/Kolab/Storage/Driver -->
        <file name="Exception.php" role="php" />
        <file name="Folder.php" role="php" />
+       <file name="Namespace.php" role="php" />
        <file name="Permission.php" role="php" />
+       <file name="Perms.php" role="php" />
       </dir> <!-- /lib/Horde/Kolab/Storage -->
+      <file name="Storage.php" role="php" />
      </dir> <!-- /lib/Horde/Kolab -->
     </dir> <!-- /lib/Horde -->
    </dir> <!-- /lib -->
@@ -93,13 +92,15 @@ http://pear.php.net/dtd/package-2.0.xsd">
      <dir name="Kolab">
       <dir name="Storage">
        <file name="AllTests.php" role="test" />
-       <file name="Autoload.php" role="php" />
+       <file name="AttachmentTest.php" role="test" />
+       <file name="Autoload.php" role="test" />
        <file name="CacheTest.php" role="test" />
        <file name="DataTest.php" role="test" />
        <file name="FolderTest.php" role="test" />
-       <file name="Scenario.php" role="php" />
+       <file name="PermsTest.php" role="test" />
+       <file name="phpunit.xml" role="test" />
+       <file name="Scenario.php" role="test" />
        <file name="StorageTest.php" role="test" />
-       <file name="PermissionTest.php" role="test" />
       </dir> <!-- /test/Horde/Kolab/Storage -->
      </dir> <!-- /test/Horde/Kolab -->
     </dir> <!-- /test/Horde -->
@@ -181,45 +182,43 @@ http://pear.php.net/dtd/package-2.0.xsd">
  </dependencies>
  <phprelease>
   <filelist>
-   <install name="doc/Horde/Kolab/Storage/usage.txt" as="Horde/Kolab/Storage/usage.txt" />
-   <install name="examples/Horde/Kolab/Storage/list.php" as="Horde/Kolab/Storage/list.php" />
-   <install name="lib/Horde/Kolab/Storage.php" as="Horde/Kolab/Storage.php" />
-   <install name="lib/Horde/Kolab/Storage/Cache.php" as="Horde/Kolab/Storage/Cache.php" />
-   <install name="lib/Horde/Kolab/Storage/Data.php" as="Horde/Kolab/Storage/Data.php" />
-   <install name="lib/Horde/Kolab/Storage/Driver.php" as="Horde/Kolab/Storage/Driver.php" />
-   <install name="lib/Horde/Kolab/Storage/Driver/Imap.php" as="Horde/Kolab/Storage/Driver/Imap.php" />
-   <install name="lib/Horde/Kolab/Storage/Exception.php" as="Horde/Kolab/Storage/Exception.php" />
-   <install name="lib/Horde/Kolab/Storage/Folder.php" as="Horde/Kolab/Storage/Folder.php" />
-   <install name="lib/Horde/Kolab/Storage/Permission.php" as="Horde/Kolab/Storage/Permission.php" />
-   <install name="test/Horde/Kolab/Storage/AllTests.php" as="Horde/Kolab/Storage/AllTests.php" />
-   <install name="test/Horde/Kolab/Storage/Autoload.php" as="Horde/Kolab/Storage/Autoload.php" />
-   <install name="test/Horde/Kolab/Storage/CacheTest.php" as="Horde/Kolab/Storage/CacheTest.php" />
-   <install name="test/Horde/Kolab/Storage/DataTest.php" as="Horde/Kolab/Storage/DataTest.php" />
-   <install name="test/Horde/Kolab/Storage/FolderTest.php" as="Horde/Kolab/Storage/FolderTest.php" />
-   <install name="test/Horde/Kolab/Storage/Scenario.php" as="Horde/Kolab/Storage/Scenario.php" />
-   <install name="test/Horde/Kolab/Storage/StorageTest.php" as="Horde/Kolab/Storage/StorageTest.php" />
-   <install name="test/Horde/Kolab/Storage/PermissionTest.php" as="Horde/Kolab/Storage/PermissionTest.php" />
+   <install as="Horde/Kolab/Storage/usage.txt" name="doc/Horde/Kolab/Storage/usage.txt" />
+   <install as="Horde/Kolab/Storage.php" name="lib/Horde/Kolab/Storage.php" />
+   <install as="Horde/Kolab/Storage/Cache.php" name="lib/Horde/Kolab/Storage/Cache.php" />
+   <install as="Horde/Kolab/Storage/Data.php" name="lib/Horde/Kolab/Storage/Data.php" />
+   <install as="Horde/Kolab/Storage/Driver.php" name="lib/Horde/Kolab/Storage/Driver.php" />
+   <install as="Horde/Kolab/Storage/Exception.php" name="lib/Horde/Kolab/Storage/Exception.php" />
+   <install as="Horde/Kolab/Storage/Folder.php" name="lib/Horde/Kolab/Storage/Folder.php" />
+   <install as="Horde/Kolab/Storage/Namespace.php" name="lib/Horde/Kolab/Storage/Namespace.php" />
+   <install as="Horde/Kolab/Storage/Permission.php" name="lib/Horde/Kolab/Storage/Permission.php" />
+   <install as="Horde/Kolab/Storage/Perms.php" name="lib/Horde/Kolab/Storage/Perms.php" />
+   <install as="Horde/Kolab/Storage/Driver/Imap.php" name="lib/Horde/Kolab/Storage/Driver/Imap.php" />
+   <install as="Horde/Kolab/Storage/AllTests.php" name="test/Horde/Kolab/Storage/AllTests.php" />
+   <install as="Horde/Kolab/Storage/AttachmentTest.php" name="test/Horde/Kolab/Storage/AttachmentTest.php" />
+   <install as="Horde/Kolab/Storage/Autoload.php" name="test/Horde/Kolab/Storage/Autoload.php" />
+   <install as="Horde/Kolab/Storage/CacheTest.php" name="test/Horde/Kolab/Storage/CacheTest.php" />
+   <install as="Horde/Kolab/Storage/DataTest.php" name="test/Horde/Kolab/Storage/DataTest.php" />
+   <install as="Horde/Kolab/Storage/FolderTest.php" name="test/Horde/Kolab/Storage/FolderTest.php" />
+   <install as="Horde/Kolab/Storage/PermsTest.php" name="test/Horde/Kolab/Storage/PermsTest.php" />
+   <install as="Horde/Kolab/Storage/phpunit.xml" name="test/Horde/Kolab/Storage/phpunit.xml" />
+   <install as="Horde/Kolab/Storage/Scenario.php" name="test/Horde/Kolab/Storage/Scenario.php" />
+   <install as="Horde/Kolab/Storage/StorageTest.php" name="test/Horde/Kolab/Storage/StorageTest.php" />
   </filelist>
  </phprelease>
  <changelog>
   <release>
-   <date>2008-12-05</date>
    <version>
-    <release>0.3.0</release>
+    <release>0.1.0</release>
     <api>0.1.0</api>
    </version>
    <stability>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
+   <date>2008-09-11</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
-    * Added attachment support.
-    * Fixed triggering folders.
-    * Fixed renaming default folders.
-    * Implemented extended free/busy access concept.
-    * kolab/issue3292 (Sharing default groupware resources does not work
-      in the web client)
+* Initial release.
    </notes>
   </release>
   <release>
@@ -233,7 +232,8 @@ http://pear.php.net/dtd/package-2.0.xsd">
     <api>alpha</api>
    </stability>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
-   <notes>* Fixed the Kolab_Storage::getFolder() function.
+   <notes>
+* Fixed the Kolab_Storage::getFolder() function.
   * Added Kolab_List::getForeignDefault() to retrieve the default folders of other
     users. Also fixes issues with overlapping default folders.
   * Fixed retrieval of general Kolab annotations.
@@ -245,18 +245,40 @@ http://pear.php.net/dtd/package-2.0.xsd">
    </notes>
   </release>
   <release>
+   <date>2008-12-05</date>
    <version>
-    <release>0.1.0</release>
+    <release>0.3.0</release>
     <api>0.1.0</api>
    </version>
    <stability>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
-   <date>2008-09-11</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
-     * Initial release.
+* Added attachment support.
+* Fixed triggering folders.
+* Fixed renaming default folders.
+* Implemented extended free/busy access concept.
+* kolab/issue3292 (Sharing default groupware resources does not work
+  in the web client)
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.4.0</release>
+    <api>0.1.0</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2010-03-11</date>
+   <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
+   <notes>
+* Fixed list driver to prevent overwriting folder data when
+  authenticating twice (relevant for testing).
+* Allow to supress triggering (relevant for testing).
    </notes>
   </release>
  </changelog>
